# gw-core

./: .gitignore  CMakeLists.txt  README.md
cmake/: CompilerWarnings.cmake
examples/: CMakeLists.txt  hello_ghostwire.cpp
include/gw/core/: audio_buffer.h  audio_format.h  buffer.h  buffer_view.h  ring_buffer.h  version.h
src/: CMakeLists.txt  audio_buffer.cpp  audio_format.cpp  buffer.cpp  buffer_view.cpp  ring_buffer.cpp  version.cpp
tests/: CMakeLists.txt  test_audio_buffer.cpp  test_audio_format.cpp  test_buffer_view.cpp  test_main.cpp  test_ring_buffer.cpp
